User and Borrowing classes - v1.0

--- a/LibraryProject/LibraryApplication/LibraryApplication.csproj
+++ b/LibraryProject/LibraryApplication/LibraryApplication.csproj
@@ -49,5 +49,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary\ClassLibrary.csproj">
+      <Project>{43a33840-d29c-4e8d-88de-aae580b11ae5}</Project>
+      <Name>ClassLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
